k8s/app/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saratube-api-service
  namespace: saratube-app
spec:
  type: NodePort
  selector:
    app: saratube-api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30088
