k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saratube-service
  namespace: saratube-app
spec:
  type: ClusterIP
  selector:
    app: saratube-app
  ports:
    - name: http
      port: 80
      targetPort: 80
